[tool.poetry]
name = "exchange-rate-keeper"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "exchange_rate_keeper"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.16"
python-dotenv = "^1.0.0"
psycopg2 = "^2.9.6"
alembic = "^1.11.1"
asyncpg = "^0.27.0"
aiohttp = "^3.8.4"
fastapi = {extras = ["all"], version = "^0.97.0"}
celery = "^5.3.1"
redis = "^4.5.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
